Correction taille image activité version tablette

--- a/Style.css
+++ b/Style.css
@@ -475,7 +475,7 @@ header{
 
 #big>img{
     border-radius: 15px 15px 0px 0px;
-    height: 167px;
+    height: 173px;
     width: 100%;
     object-fit: cover;
 }
@@ -493,7 +493,7 @@ header{
 #small>img{
     border-radius: 15px 15px 0px 0px;
     width: 100%;
-    height: 93.5px;
+    height: 99.5px;
     object-fit: cover;
 }
 
@@ -664,7 +664,7 @@ footer>*{
         flex-grow: 1;
         width: 100%;
         object-fit: cover;
-        height: 50px;
+        height: 150px;
     }
 
     .activity_2{
@@ -696,14 +696,14 @@ footer>*{
     #big>img{
         border-radius: 15px 15px 0px 0px;
         width: 100%;
-        height: 148px;
+        height: 154px;
         object-fit: cover;
     }
     
     #small>img{
         border-radius: 15px 15px 0px 0px;
         width: 100%;
-        height: 148px;
+        height: 154px;
         object-fit: cover;
     }
 
